# InfSecondGrade

Labs_1st_Semester/: CMakeLists.txt
Labs_1st_Semester/lab1/: CMakeLists.txt
Labs_1st_Semester/lab1/scr/: 3.float_by_bits.cpp  5.nonassociativity.cpp  6.harmonic.cpp
Labs_1st_Semester/lab1/src/: 1.int_by_bits.cpp  2.un_int_by_bits.cpp  4.gap_between_nums.cpp  merge_sort.cpp  my_beloved_vector.cpp
Labs_1st_Semester/lab2/: CMakeLists.txt
Labs_1st_Semester/lab2/src/: matrix.cpp  subvector.cpp
Labs_2nd_Semester/lab 4/: decart_multiplication.cpp  stack.cpp  static_interface.cpp  templated_sort.cpp
haha/: #sem.py  123.txt  20.xlsx  30.xlsx  50.xlsx  a=int(input()).py  haha.py  input.txt  графики.py
lab1/int float/: 3.float_by_bits.cpp  4.gap_between_nums.cpp  6.harmonic.cpp
lab1/sorts/: heap_sort.cpp  merge_sort.cpp  график.py
lab2/: subvector.cpp  subvector_test.cpp
lab2/list/: list test.cpp  list.cpp
lab2/matrix/: matrix.cpp
lab2/subvector/: subvector.cpp
